# ai-agent

./: .gitignore  ADR.md  README.md  package.json  pyproject.toml  requirements-lambda.txt  serverless.yml  setup-github-personal.sh
.github/: CODEOWNERS  SETUP_GITHUB_PERSONAL.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  dependency-review.yml  release.yml
src/: __init__.py
src/adapters/: README.md  __init__.py
src/adapters/files/: __init__.py  local_adapter.py
src/adapters/llm/: __init__.py  openapi_adapter.py
src/adapters/messaging/: __init__.py  twilio_adapter.py
src/adapters/storage/: __init__.py  base.py  local_adapter.py
src/agent/: __init__.py  models.py  presenter.py  router.py
src/core/: __init__.py  config.py  interfaces.py  logging.py  models.py  validators.py
src/domain/: __init__.py
src/factories/: __init__.py  container.py
src/infrastructure/: __init__.py  observability.py
src/llm/: __init__.py  prompts.py
src/services/: __init__.py  message_processor.py
src/tests/: outputs.py  test_agent.py
src/tools/: __init__.py
src/transport/: error_handler.py  lambda_handler.py  lambda_models.py  middleware.py  router.py
tests/: COVERAGE_GAPS.md  conftest.py  test_agent_entrypoint.py  test_agent_handlers.py  test_agent_presenter.py  test_catalog_inventory.py  test_catalog_models.py  test_error_handler.py  test_file_storage.py  test_lambda_handler.py  test_transport_lambda_models.py  test_twilio_adapter.py
(+14 files in other folders)
